# mikrotik-rest-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  flake.nix  pyproject.toml  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
.opencode/skills/mikrotik/: SKILL.md
src/mikrotik_mcp/: app.py  server.py
src/mikrotik_mcp/tools/: AGENTS.md  __init__.py  dhcp_lease.py  dns.py  interface_vlan.py  interface_wireguard.py  ip_pool.py  system_backup.py  system_logging.py  system_logs.py
src/mikrotik_rest_mcp/: __init__.py  annotations.py  app.py  config.py  connection.py  exceptions.py  server.py  submenu.py  submenus.py
src/mikrotik_rest_mcp/tools/: AGENTS.md  __init__.py  dhcp_lease.py  dhcp_pool.py  dhcp_server.py  dns.py  dns_static.py  firewall_address_list.py  firewall_filter.py  firewall_nat.py  interface_vlan.py  interface_wireguard.py  interface_wireless.py  ip_address.py  ip_pool.py  ip_route.py  system_backup.py  system_logging.py  (+2 more)
tests/: __init__.py  conftest.py  test_config.py  test_connection.py  test_exceptions.py  test_submenu.py
tests/test_tools/: __init__.py  test_bespoke.py  test_dhcp_lease.py  test_dhcp_pool.py  test_dhcp_server.py  test_dns.py  test_dns_static.py  test_firewall_address_list.py  test_firewall_filter.py  test_firewall_nat.py  test_interface_vlan.py  test_interface_wireguard.py  test_interface_wireless.py  test_ip_address.py  test_ip_pool.py  test_ip_route.py  test_system_backup.py  test_system_logging.py  test_system_logs.py  test_system_users.py
